--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -19,4 +19,4 @@ windowrulev2 = float,title:^(flameshot)
 windowrulev2 = move 0 0,title:^(flameshot)
 windowrulev2 = suppressevent fullscreen,title:^(flameshot)
 
-windowrule = workspace 10, ^(.*Spotify.*)$
+windowrule = workspace 10 silent, ^(.*Spotify.*)$
