--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -32,6 +32,11 @@ exec-once = ~/.config/hypr/scripts/cleanup.sh
 # Load configuration from ML4W Hyprland Settings App
 exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
 
+# Enable screen share in wayland
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+
 # Set workspace to monitors
 exec-once = ~/.config/hypr/scripts/set-monitor-workspace.sh
 
