--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -31,6 +31,7 @@ bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the
 bind = $mainMod CTRL, C, exec, ~/.config/ml4w/settings/calculator.sh # Open the calculator
 
 # Windows
+bind = $mainMod, W, exec, $HYPRSCRIPTS/set-monitor-workspace.sh # fix workspace and screen
 bind = $mainMod, Q, killactive # Kill active window
 bind = $mainMod, M, fullscreen # Set active window to fullscreen
 bind = $mainMod, T, togglefloating # Toggle active windows into floating mode
