--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -2,6 +2,8 @@
 # Autostart
 # ----------------------------------------------------- 
 
+exec-once = /usr/lib/pam_kwallet_init
+
 # Setup XDG for screen sharing and start waypaper and waybar
 exec-once = ~/.config/hypr/scripts/xdg.sh
 
