--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -3,7 +3,7 @@
 # name: "Default"
 # ----------------------------------------------------- 
 
-# Monitor
+# # Monitor
 workspace=1,monitor:HDMI-A-1
 workspace=2,monitor:HDMI-A-1
 workspace=3,monitor:HDMI-A-1
@@ -15,7 +15,7 @@ workspace=7,monitor:HDMI-A-2
 workspace=8,monitor:HDMI-A-2
 ## Extra workspace
 workspace=9,monitor:HDMI-A-1
-workspace=10,monitor:HDMI-A-2
+workspace=10,monitor:HDMI-A-1
 
 
 # SUPER KEY
@@ -67,7 +67,7 @@ bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh # Open clipboard manager
 bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh # Open waybar theme switcher
 bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
 bind = $mainMod SHIFT, H, exec, $HYPRSCRIPTS/hyprshade.sh # Toggle screenshader
-bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh # Toggle game mode
+# bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh # Toggle game mode
 bind = $mainMod, Z, exec, missioncenter # Open Mission Center
 
 # Workspaces
