set monitor fix

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -40,7 +40,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 
 
 # Set workspace to monitors
-exec-once = ~/.config/hypr/scripts/set-monitor-workspace.sh
+exec = ~/.config/hypr/scripts/set-monitor-workspace.sh
 
 # Autostart
 exec-once = [workspace 10 silent] signal-desktop
