--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -3,20 +3,20 @@
 # name: "Default"
 # ----------------------------------------------------- 
 
+
 # # Monitor
-workspace=1,monitor:HDMI-A-1
-workspace=2,monitor:HDMI-A-1
-workspace=3,monitor:HDMI-A-1
-workspace=4,monitor:HDMI-A-1
-
-workspace=5,monitor:HDMI-A-2
-workspace=6,monitor:HDMI-A-2
-workspace=7,monitor:HDMI-A-2
-workspace=8,monitor:HDMI-A-2
-## Extra workspace
-workspace=9,monitor:HDMI-A-1
-workspace=10,monitor:HDMI-A-1
-
+# workspace=1,monitor:HDMI-A-1
+# workspace=2,monitor:HDMI-A-1
+# workspace=3,monitor:HDMI-A-1
+# workspace=4,monitor:HDMI-A-1
+#
+# workspace=5,monitor:HDMI-A-2
+# workspace=6,monitor:HDMI-A-2
+# workspace=7,monitor:HDMI-A-2
+# workspace=8,monitor:HDMI-A-2
+# ## Extra workspace
+# workspace=9,monitor:HDMI-A-1
+# workspace=10,monitor:HDMI-A-1
 
 # SUPER KEY
 $mainMod = SUPER
