--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -33,7 +33,7 @@ bind = $mainMod CTRL, C, exec, ~/.config/ml4w/settings/calculator.sh # Open the 
 # Windows
 bind = $mainMod, W, exec, $HYPRSCRIPTS/set-monitor-workspace.sh # fix workspace and screen
 bind = $mainMod, Q, killactive # Kill active window
-bind = $mainMod, M, fullscreen # Set active window to fullscreen
+bind = $mainMod, M, fullscreen, 1 # Set active window to fullscreen
 bind = $mainMod, T, togglefloating # Toggle active windows into floating mode
 bind = $mainMod SHIFT, T, exec, $HYPRSCRIPTS/toggleallfloat.sh # Toggle all windows into floating mode
 bind = $mainMod, J, togglesplit # Toggle split
