--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -2,7 +2,7 @@
 # Autostart
 # ----------------------------------------------------- 
 
-exec-once = [ -f /usr/lib/pam_kwallet_init ] && [ -d /usr/share/plasma ] && /usr/lib/pam_kwallet_init
+exec-once = /usr/lib/pam_kwallet_init
 
 # Setup XDG for screen sharing and start waypaper and waybar
 exec-once = ~/.config/hypr/scripts/xdg.sh
