--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,6 +10,11 @@
 # Create your own custom configuration variation instead.
 # https://github.com/mylinuxforwork/dotfiles/wiki/Configuration-Variations
 
+# Plugins
+
+plugin = $HOME/.config/hypr/plugins/hyprscroller.so
+exec-once = hyprpm reload -n
+
 # ----------------------------------------------------- 
 # Monitor
 # ----------------------------------------------------- 
@@ -24,6 +29,7 @@ source = ~/.config/hypr/conf/cursor.conf
 # Environment
 # ----------------------------------------------------- 
 source = ~/.config/hypr/conf/environment.conf
+
 
 # ----------------------------------------------------- 
 # Keyboard
