--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -31,7 +31,7 @@ bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the
 bind = $mainMod CTRL, C, exec, ~/.config/ml4w/settings/calculator.sh # Open the calculator
 
 # Windows
-bind = $mainMod, W, exec, $HYPRSCRIPTS/set-monitor-workspace.sh # fix workspace and screen
+# bind = $mainMod, W, exec, $HYPRSCRIPTS/set-monitor-workspace.sh # fix workspace and screen
 bind = $mainMod, Q, killactive # Kill active window
 bind = $mainMod, M, fullscreen, 1 # Set active window to fullscreen
 bind = $mainMod, T, togglefloating # Toggle active windows into floating mode
@@ -93,8 +93,8 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8 # Move active window to workspace 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9 # Move active window to workspace 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10 # Move active window to workspace 10
 
-bind = $mainMod, Tab, workspace, m+1 # Open next workspace
-bind = $mainMod SHIFT, Tab, workspace, m-1 # Open previous workspace
+# bind = $mainMod, Tab, workspace, m+1 # Open next workspace
+# bind = $mainMod SHIFT, Tab, workspace, m-1 # Open previous workspace
 
 bind = $mainMod CTRL, 1, exec, $HYPRSCRIPTS/moveTo.sh 1 # Move all windows to workspace 1
 bind = $mainMod CTRL, 2, exec, $HYPRSCRIPTS/moveTo.sh 2 # Move all windows to workspace 2
@@ -134,3 +134,175 @@ bind = , XF86Tools, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dot
 
 bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10
 bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10- 
+
+
+# hyprscroller
+#
+# Move focus with mainMod + arrow keys
+# bind = $mainMod, left, movefocus, l
+# bind = $mainMod, right, movefocus, r
+# bind = $mainMod, up, movefocus, u
+# bind = $mainMod, down, movefocus, d
+# bind = $mainMod, S, plugin:scroller:toggle
+bind = $mainMod, home, scroller:movefocus, begin
+bind = $mainMod, end, scroller:movefocus, end
+
+# Movement
+# bind = $mainMod CTRL, left, movewindow, l
+# bind = $mainMod CTRL, right, movewindow, r
+# bind = $mainMod CTRL, up, movewindow, u
+# bind = $mainMod CTRL, down, movewindow, d
+bind = $mainMod CTRL, home, scroller:movewindow, begin
+bind = $mainMod CTRL, end, scroller:movewindow, end
+
+
+# Modes
+bind = $mainMod, bracketleft, scroller:setmode, row
+bind = $mainMod, bracketright, scroller:setmode, col
+
+# Sizing keys
+# bind = $mainMod, equal, scroller:cyclesize, next
+# bind = $mainMod, minus, scroller:cyclesize, prev
+bind = $mainMod, equal, scroller:cyclewidth, next
+bind = $mainMod, minus, scroller:cyclewidth, prev
+bind = $mainMod SHIFT, equal, scroller:cycleheight, next
+bind = $mainMod SHIFT, minus, scroller:cycleheight, prev
+
+# Admit/Expel
+bind = $mainMod, I, scroller:admitwindow,
+bind = $mainMod, O, scroller:expelwindow,
+
+# Center submap
+# will switch to a submap called center
+bind = $mainMod, C, submap, center
+# will start a submap called "center"
+submap = center
+# sets repeatable binds for resizing the active window
+bind = , C, scroller:alignwindow, c
+bind = , C, submap, reset
+bind = , m, scroller:alignwindow, m
+bind = , m, submap, reset
+bind = , right, scroller:alignwindow, r
+bind = , right, submap, reset
+bind = , left, scroller:alignwindow, l
+bind = , left, submap, reset
+bind = , up, scroller:alignwindow, u
+bind = , up, submap, reset
+bind = , down, scroller:alignwindow, d
+bind = , down, submap, reset
+# use reset to go back to the global submap
+bind = , escape, submap, reset
+# will reset the submap, meaning end the current one and return to the global one
+submap = reset
+
+# Resize submap
+# will switch to a submap called resize
+bind = $mainMod SHIFT, R, submap, resize
+# will start a submap called "resize"
+submap = resize
+# sets repeatable binds for resizing the active window
+binde = , right, resizeactive, 100 0
+binde = , left, resizeactive, -100 0
+binde = , up, resizeactive, 0 -100
+binde = , down, resizeactive, 0 100
+# use reset to go back to the global submap
+bind = , escape, submap, reset
+# will reset the submap, meaning end the current one and return to the global one
+submap = reset
+
+# Fit size submap
+# will switch to a submap called fitsize
+bind = $mainMod, W, submap, fitsize
+# will start a submap called "fitsize"
+submap = fitsize
+# sets binds for fitting columns/windows in the screen
+bind = , W, scroller:fitsize, visible
+bind = , W, submap, reset
+bind = , right, scroller:fitsize, toend
+bind = , right, submap, reset
+bind = , left, scroller:fitsize, tobeg
+bind = , left, submap, reset
+bind = , up, scroller:fitsize, active
+bind = , up, submap, reset
+bind = , down, scroller:fitsize, all
+bind = , down, submap, reset
+# use reset to go back to the global submap
+bind = , escape, submap, reset
+# will reset the submap, meaning end the current one and return to the global one
+submap = reset
+
+# overview keys
+# bind key to toggle overview (normal)
+bind = $mainMod, tab, scroller:toggleoverview
+# bind = ,mouse:275, scroller:toggleoverview
+
+# Marks
+bind = $mainMod, M, submap, marksadd
+submap = marksadd
+bind = , a, scroller:marksadd, a
+bind = , a, submap, reset
+bind = , b, scroller:marksadd, b
+bind = , b, submap, reset
+bind = , c, scroller:marksadd, c
+bind = , c, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
+bind = $mainMod SHIFT, M, submap, marksdelete
+submap = marksdelete
+bind = , a, scroller:marksdelete, a
+bind = , a, submap, reset
+bind = , b, scroller:marksdelete, b
+bind = , b, submap, reset
+bind = , c, scroller:marksdelete, c
+bind = , c, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
+bind = $mainMod, apostrophe, submap, marksvisit
+submap = marksvisit
+bind = , a, scroller:marksvisit, a
+bind = , a, submap, reset
+bind = , b, scroller:marksvisit, b
+bind = , b, submap, reset
+bind = , c, scroller:marksvisit, c
+bind = , c, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
+bind = $mainMod CTRL, M, scroller:marksreset
+
+# Pin
+bind = $mainMod, P, scroller:pin,
+
+# Window copy/paste
+bind = $mainMod, Insert, scroller:selectiontoggle,
+bind = $mainMod CTRL, Insert, scroller:selectionreset,
+bind = $mainMod SHIFT, Insert, scroller:selectionmove, right
+
+# Trails and Trailmarks
+bind = $mainMod SHIFT, semicolon, submap, trail
+submap = trail
+bind = , bracketright, scroller:trailnext,
+bind = , bracketleft, scroller:trailprevious,
+bind = , semicolon, scroller:trailnew,
+bind = , semicolon, submap, reset
+bind = , d, scroller:traildelete,
+bind = , d, submap, reset
+bind = , c, scroller:trailclear,
+bind = , c, submap, reset
+bind = , Insert, scroller:trailtoselection,
+bind = , Insert, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
+bind = $mainMod, semicolon, submap, trailmark
+submap = trailmark
+bind = , bracketright, scroller:trailmarknext,
+bind = , bracketleft, scroller:trailmarkprevious,
+bind = , semicolon, scroller:trailmarktoggle,
+bind = , semicolon, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
+bind = $mainMod, slash, scroller:jump,
