--- a/.config/hypr/conf/keyboard.conf
+++ b/.config/hypr/conf/keyboard.conf
@@ -3,10 +3,10 @@
 # https://wiki.hyprland.org/Configuring/Variables/#input
 # -----------------------------------------------------
 input {
-    kb_layout = us
-    kb_variant = colemak_dh
-    kb_model =
-    kb_options =
+    kb_layout = us, us
+    kb_variant = colemak_dh,
+    kb_model = 
+    # kb_options = grp:lwin_toggle, grp:rshift_toggle
     numlock_by_default = true
     mouse_refocus = false
     
