added scroller kb, ghostty optimisation + img

--- a/.config/hypr/conf/layouts/mylayouts.conf
+++ b/.config/hypr/conf/layouts/mylayouts.conf
@@ -27,7 +27,8 @@ plugin {
         # gesture_scroll_enable = false
 # overview_scale_content = 1
         # ultra-wide monitor
-        #column_widths = onefourth onethird onehalf onesixth
+        column_widths =  onefourth onehalf threequarters one 
+        window_heights = onefourth onehalf threequarters one 
         # portrait mode monitors
         #monitor_modes = DP-2=col,HDMI-A-1=col
         gesture_workspace_switch_prefix = e
