--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -8,10 +8,12 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "source": "~/.config/fastfetch/ascii/ghostty.txt",
-"color": {
-            "1": "red",
-            "2": "yellow"
-        },
+    // "source": "~/.config/fastfetch/image/new-ghostty-purple.webp",
+    // "type": "kitty",
+    "color": {
+      "1": "red",
+      "2": "yellow"
+    },
     "padding": {
       "top": 1,
       "right": 4
