--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -33,7 +33,7 @@ bind = $mainMod CTRL, C, exec, ~/.config/ml4w/settings/calculator.sh # Open the 
 # Windows
 # bind = $mainMod, W, exec, $HYPRSCRIPTS/set-monitor-workspace.sh # fix workspace and screen
 bind = $mainMod, Q, killactive # Kill active window
-bind = $mainMod, M, fullscreen, 1 # Set active window to fullscreen
+  bind = $mainMod, F, fullscreen, 1 # Set active window to fullscreen
 bind = $mainMod, T, togglefloating # Toggle active windows into floating mode
 bind = $mainMod SHIFT, T, exec, $HYPRSCRIPTS/toggleallfloat.sh # Toggle all windows into floating mode
 bind = $mainMod, J, togglesplit # Toggle split
@@ -43,10 +43,10 @@ bind = $mainMod, up, movefocus, u # Move focus up
 bind = $mainMod, down, movefocus, d # Move focus down
 bindm = $mainMod, mouse:272, movewindow # Move window with the mouse
 bindm = $mainMod, mouse:273, resizewindow # Resize window with the mouse
-bind = $mainMod SHIFT, right, resizeactive, 100 0 # Increase window width with keyboard
-bind = $mainMod SHIFT, left, resizeactive, -100 0 # Reduce window width with keyboard
-bind = $mainMod SHIFT, down, resizeactive, 0 100 # Increase window height with keyboard
-bind = $mainMod SHIFT, up, resizeactive, 0 -100 # Reduce window height with keyboard
+bind = $mainMod ALT, right, resizeactive, 100 0 # Increase window width with keyboard
+bind = $mainMod ALT, left, resizeactive, -100 0 # Reduce window width with keyboard
+bind = $mainMod ALT, down, resizeactive, 0 100 # Increase window height with keyboard
+bind = $mainMod ALT, up, resizeactive, 0 -100 # Reduce window height with keyboard
 bind = $mainMod, G, togglegroup # Toggle window group
 bind = $mainMod, K, swapsplit # Swapsplit
 
@@ -109,7 +109,7 @@ bind = $mainMod CTRL, 0, exec, $HYPRSCRIPTS/moveTo.sh 10 # Move all windows to w
 
 bind = $mainMod, mouse_down, workspace, e+1 # Open next workspace
 bind = $mainMod, mouse_up, workspace, e-1 # Open previous workspace
-bind = $mainMod CTRL, down, workspace, empty # Open the next empty workspace
+# bind = $mainMod CTRL, down, workspace, empty # Open the next empty workspace
 
 # Passthrough SUPER KEY to Virtual Machine
 # bind = $mainMod, P, submap, passthru # Passthrough SUPER key to virtual machine
@@ -148,10 +148,10 @@ bind = $mainMod, home, scroller:movefocus, begin
 bind = $mainMod, end, scroller:movefocus, end
 
 # Movement
-# bind = $mainMod CTRL, left, movewindow, l
-# bind = $mainMod CTRL, right, movewindow, r
-# bind = $mainMod CTRL, up, movewindow, u
-# bind = $mainMod CTRL, down, movewindow, d
+bind = $mainMod CTRL, left, movewindow, l
+bind = $mainMod CTRL, right, movewindow, r
+bind = $mainMod CTRL, up, movewindow, u
+bind = $mainMod CTRL, down, movewindow, d
 bind = $mainMod CTRL, home, scroller:movewindow, begin
 bind = $mainMod CTRL, end, scroller:movewindow, end
 
@@ -161,12 +161,14 @@ bind = $mainMod, bracketleft, scroller:setmode, row
 bind = $mainMod, bracketright, scroller:setmode, col
 
 # Sizing keys
-# bind = $mainMod, equal, scroller:cyclesize, next
-# bind = $mainMod, minus, scroller:cyclesize, prev
-bind = $mainMod, equal, scroller:cyclewidth, next
-bind = $mainMod, minus, scroller:cyclewidth, prev
-bind = $mainMod SHIFT, equal, scroller:cycleheight, next
-bind = $mainMod SHIFT, minus, scroller:cycleheight, prev
+# bind = $mainMod, equal, scroller:cyclewidth, next
+# bind = $mainMod, minus, scroller:cyclewidth, prev
+# bind = $mainMod SHIFT, equal, scroller:cycleheight, next
+# bind = $mainMod SHIFT, minus, scroller:cycleheight, prev
+bind = $mainMod SHIFT, right, scroller:cyclewidth, next
+bind = $mainMod SHIFT, left, scroller:cyclewidth, prev
+bind = $mainMod SHIFT, up, scroller:cycleheight, next
+bind = $mainMod SHIFT, down, scroller:cycleheight, prev
 
 # Admit/Expel
 bind = $mainMod, I, scroller:admitwindow,
