Gitignore, untrack plugins and cache. New keybindings

--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -243,8 +243,8 @@ bind = $mainMod, M, submap, marksadd
 submap = marksadd
 bind = , a, scroller:marksadd, a
 bind = , a, submap, reset
-bind = , b, scroller:marksadd, b
-bind = , b, submap, reset
+bind = , n, scroller:marksadd, n
+bind = , n, submap, reset
 bind = , c, scroller:marksadd, c
 bind = , c, submap, reset
 bind = , escape, submap, reset
@@ -254,8 +254,8 @@ bind = $mainMod SHIFT, M, submap, marksdelete
 submap = marksdelete
 bind = , a, scroller:marksdelete, a
 bind = , a, submap, reset
-bind = , b, scroller:marksdelete, b
-bind = , b, submap, reset
+bind = , n, scroller:marksdelete, n
+bind = , n, submap, reset
 bind = , c, scroller:marksdelete, c
 bind = , c, submap, reset
 bind = , escape, submap, reset
@@ -265,8 +265,8 @@ bind = $mainMod, apostrophe, submap, marksvisit
 submap = marksvisit
 bind = , a, scroller:marksvisit, a
 bind = , a, submap, reset
-bind = , b, scroller:marksvisit, b
-bind = , b, submap, reset
+bind = , n, scroller:marksvisit, n
+bind = , n, submap, reset
 bind = , c, scroller:marksvisit, c
 bind = , c, submap, reset
 bind = , escape, submap, reset
