--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -7,23 +7,22 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/ascii/ghostty.txt",
-    // "source": "~/.config/fastfetch/image/new-ghostty-purple.webp",
-    // "type": "kitty",
+    // "source": "~/.config/fastfetch/ascii/ghostty.txt",
+    "source": "~/.config/fastfetch/image/new-ghostty-purple.webp",
+    "type": "kitty",
     "color": {
       "1": "red",
       "2": "yellow"
     },
     "padding": {
       "top": 1,
-      "right": 4
+      "right": 0
     }
   },
   "display": {
     "separator": " ➜  "
   },
   "modules": [
-    "break",
     "break",
     "break",
     {
