--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -710,6 +710,7 @@ mouse-scroll-multiplier = 1
 # The opacity level (opposite of transparency) of the background. A value of
 # 1 is fully opaque and a value of 0 is fully transparent. A value less than 0
 # or greater than 1 will be clamped to the nearest valid value.
+# transparent
 background-opacity = 0.7
 
 # A positive value enables blurring of the background when background-opacity
@@ -1676,7 +1677,8 @@ vt-kam-allowed = false
 # custom-shader = ghostty-shaders-main/glow.glsl
 # custom-shader = ghostty-shaders-main/stack2.glsl
 # custom-shader = ghostty-shaders-main/stack3.glsl
-#custom-shader = ghostty-shaders/smoke-and-ghost.glsl
+# custom-shader = ghostty-shaders-main/starfield.glsl
+# custom-shader = ghostty-shaders/smoke-and-ghost.glsl
 # custom-shader = ghostty-shaders/retro-wave.glsl
 # custom-shader = ghostty-shaders/nature.glsl
 
