Mute mic notification

--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -18,7 +18,7 @@
 # workspace=9,monitor:HDMI-A-1
 # workspace=10,monitor:HDMI-A-1
 
-# SUPER KEY
+# SUPER KE
 $mainMod = SUPER
 $HYPRSCRIPTS = ~/.config/hypr/scripts
 $SCRIPTS = ~/.config/ml4w/scripts
@@ -29,7 +29,6 @@ bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Open the browser
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh # Open the filemanager
 bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the emoji picker
 bind = $mainMod CTRL, C, exec, ~/.config/ml4w/settings/calculator.sh # Open the calculator
-
 # Windows
 # bind = $mainMod, W, exec, $HYPRSCRIPTS/set-monitor-workspace.sh # fix workspace and screen
 bind = $mainMod, Q, killactive # Kill active window
@@ -127,11 +126,11 @@ bind = , XF86AudioPlay, exec, playerctl play-pause # Audio play pause
 bind = , XF86AudioPause, exec, playerctl pause # Audio pause
 bind = , XF86AudioNext, exec, playerctl next # Audio next
 bind = , XF86AudioPrev, exec, playerctl previous # Audio previous
-bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle # Toggle microphone
+# bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send "Microphone" "$(pactl get-source-mute @DEFAULT_SOURCE@)"
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send "Microphone" "$(pactl get-source-mute @DEFAULT_SOURCE@ | grep -q 'yes' && echo 'Muted' || echo 'Active')"  # Toggle microphone
 bind = , XF86Calculator, exec, ~/.config/ml4w/settings/calculator.sh # Open calculator
 bind = , XF86Lock, exec, hyprlock # Open screenlock
 bind = , XF86Tools, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
-
 bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10
 bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10- 
 
