--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -198,7 +198,7 @@ submap = reset
 
 # Resize submap
 # will switch to a submap called resize
-bind = $mainMod SHIFT, R, submap, resize
+# bind = $mainMod SHIFT, R, submap, resize
 # will start a submap called "resize"
 submap = resize
 # sets repeatable binds for resizing the active window
