fixed error message on start potentially, seems like right click are fixed too, nvim steal focus on float above it. Fixed floating prompt not resizable

--- a/.config/hypr/conf/layouts/mylayouts.conf
+++ b/.config/hypr/conf/layouts/mylayouts.conf
@@ -2,7 +2,6 @@
 # Layouts
 # ----------------------------------------------------- 
 
-# exec-once = hyprpm reload -n
 
 exec-once = hyprctl dispatch scroller:setmode col
 debug {
@@ -21,7 +20,7 @@ plugin {
         monitor_options = ($primary = (mode = col ), $secondary = (mode = col))
         jump_labels_color = rgba(774499ff)
         jump_labels_scale = 0.2
-        column_default_width = maximized
+        column_default_width = one
         focus_wrap = false
         # mode = 1 
         # gesture_scroll_enable = false
@@ -32,7 +31,7 @@ plugin {
         # portrait mode monitors
         #monitor_modes = DP-2=col,HDMI-A-1=col
         gesture_workspace_switch_prefix = e
-
+        # allow_focus_steal = false
     }
 }
 
@@ -58,7 +57,7 @@ binds {
 }
 input {
     follow_mouse = 2
-# mouse_refocus = false
+    # mouse_refocus = false
 }
 cursor {
     no_warps = true
