--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -1,6 +1,9 @@
 # ----------------------------------------------------- 
 # Window rules
 # ----------------------------------------------------- 
+# windowrulev2 = stayfocused,floating:1
+windowrulev2 = stayfocused,floating:1
+# windowrulev2 = stayfocused,title:^(Neovim)$
 
 windowrule = tile,^(Microsoft-edge)$
 windowrule = tile,^(Brave-browser)$
@@ -20,3 +23,7 @@ windowrulev2 = move 0 0,title:^(flameshot)
 windowrulev2 = suppressevent fullscreen,title:^(flameshot)
 
 windowrule = workspace 10 silent, ^(.*Spotify.*)$
+windowrule = workspace 10 silent, ^(.*signal.*)$
+# windowrulev2 = minsize 500 500,class:.*
+windowrulev2 = minsize 10% 10%,floating:1
+
