--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
-folder = ~/Downloads/wallpaper
-wallpaper = ~/Downloads/wallpaper/Fantasy-Autumn.png
+folder = ~/wallpaper
+wallpaper = ~/wallpaper/14482.jpg
 backend = hyprpaper
 monitors = All
 fill = fill
