--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -1,47 +1,1 @@
-# ----------------------------------------------------- 
-# Autostart
-# ----------------------------------------------------- 
-
-exec-once = /usr/lib/pam_kwallet_init
-
-# Setup XDG for screen sharing and start waypaper and waybar
-exec-once = ~/.config/hypr/scripts/xdg.sh
-
-# Start Polkit
-exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-
-# Load Dunst Notification Manager
-exec-once = dunst
-
-# Load GTK settings
-exec-once = ~/.config/hypr/scripts/gtk.sh
-
-# Using hypridle to start hyprlock
-exec-once = hypridle
-
-# Load cliphist history
-exec-once = wl-paste --watch cliphist store
-
-# Autostart ML4W App
-exec-once = ~/.config/ml4w/scripts/ml4w-autostart.sh
-
-# Start ewww daemon
-exec-once = ~/.config/ml4w/scripts/ags.sh
-
-# Start autostart cleanup
-exec-once = ~/.config/hypr/scripts/cleanup.sh
-
-# Load configuration from ML4W Hyprland Settings App
-exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
-
-# Enable screen share in wayland
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-
-# Set workspace to monitors
-exec = ~/.config/hypr/scripts/set-monitor-workspace.sh
-
-# Autostart
-exec-once = [workspace 10 silent] signal-desktop
-
+source = ~/.config/hypr/conf/autostart/autostart.conf
