--- a/.config/hypr/conf/keyboard.conf
+++ b/.config/hypr/conf/keyboard.conf
@@ -6,7 +6,7 @@ input {
     kb_layout = us, us
     kb_variant = colemak_dh,
     kb_model = 
-    kb_options = grp:alts_toggle
+    # kb_options = grp:alts_toggle
     # kb_options = grp:lwin_toggle, grp:rshift_toggle
     numlock_by_default = true
     mouse_refocus = false
