--- a/.config/hypr/conf/ml4w.conf
+++ b/.config/hypr/conf/ml4w.conf
@@ -1,6 +1,8 @@
-# ----------------------------------------------------- 
-# ML4W configurations
-# ----------------------------------------------------- 
+#    __  _____  _____      __  _____          ___
+#   /  |/  / / / / / | /| / / / ___/__  ___  / _/
+#  / /|_/ / /_/_  _/ |/ |/ / / /__/ _ \/ _ \/ _/ 
+# /_/  /_/____//_/ |__/|__/  \___/\___/_//_/_/   
+#                                               
 
 # Pavucontrol floating
 windowrulev2 = float,class:(.*org.pulseaudio.pavucontrol.*)
@@ -117,3 +119,6 @@ env = APPIMAGELAUNCHER_DISABLE,1
 # Ozone
 env = OZONE_PLATFORM,wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+
+# Python
+env = PYTHONPATH,/usr/lib/python3.12/site-packages:/usr/lib/python3.13/site-packages:$PYTHONPATH 
