--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,9 +10,7 @@
 # Create your own custom configuration variation instead.
 # https://github.com/mylinuxforwork/dotfiles/wiki/Configuration-Variations
 
-# Plugins
 
-plugin = $HOME/.config/hypr/plugins/hyprscroller.so
 exec-once = hyprpm reload -n
 
 # ----------------------------------------------------- 
@@ -30,16 +28,15 @@ source = ~/.config/hypr/conf/cursor.conf
 # ----------------------------------------------------- 
 source = ~/.config/hypr/conf/environment.conf
 
-
 # ----------------------------------------------------- 
 # Keyboard
 # ----------------------------------------------------- 
 source = ~/.config/hypr/conf/keyboard.conf
 
 # ----------------------------------------------------- 
-# Load pywal color file
+# Load pywal color file :TODO
 # ----------------------------------------------------- 
-source = ~/.cache/wal/colors-hyprland.conf
+# source = ~/.cache/wal/colors-hyprland.conf
 
 # ----------------------------------------------------- 
 # Autostart
@@ -75,4 +72,3 @@ source = ~/.config/hypr/conf/ml4w.conf
 # Environment for xdg-desktop-portal-hyprland
 # ----------------------------------------------------- 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
