--- a/.config/waybar/themes/ml4w-bottom/config
+++ b/.config/waybar/themes/ml4w-bottom/config
@@ -26,12 +26,11 @@
 
     // Modules Left
     "modules-left": [
-        "custom/appmenu",
+"custom/appmenu",
         "group/links",
-        //"group/settings",
-        "wlr/taskbar",
-        //"group/quicklinks",
-        "hyprland/window",
+"wlr/taskbar",
+        "group/quicklinks",
+"hyprland/window",
     ],
 
     // Modules Center
@@ -44,7 +43,7 @@
     "modules-right": [
         "custom/updates",
         "pulseaudio",
-        //"backlight",
+//"backlight",
         "bluetooth",
         "battery", 
 "network",
