--- a/.config/hypr/conf/autostart/autostart.conf
+++ b/.config/hypr/conf/autostart/autostart.conf
@@ -45,4 +45,4 @@ exec = ~/.config/hypr/scripts/set-monitor-workspace.sh
 
 # set dark theme on qt
 exec-once=gsettings set org.gnome.desktop.interface color-scheme prefer-dark
-exec-once=signal-desktop --enable-features=UseOzonePlatform --ozone-platform=wayland
+exec-once=signal-desktop --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
