--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -26,6 +26,7 @@ $SCRIPTS = ~/.config/ml4w/scripts
 # Applications
 bind = $mainMod, RETURN, exec, ~/.config/ml4w/settings/terminal.sh # Open the terminal
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Open the browser
+bind = $mainMod, S, exec, ~/.config/ml4w/settings/scratch-buffer.sh
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh # Open the filemanager
 bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the emoji picker
 bind = $mainMod, equal, exec, ~/.config/ml4w/settings/calculator.sh # Open the calculator
@@ -35,7 +36,7 @@ bind = $mainMod, equal, exec, ~/.config/ml4w/settings/calculator.sh # Open the c
 bind = $mainMod, Q, killactive # Kill active window
   bind = $mainMod, F, fullscreen, 1 # Set active window to fullscreen
 bind = $mainMod, T, togglefloating # Toggle active windows into floating mode
-bind = $mainMod SHIFT, T, exec, $HYPRSCRIPTS/toggleallfloat.sh # Toggle all windows into floating mode
+# bind = $mainMod SHIFT, T, exec, $HYPRSCRIPTS/toggleallfloat.sh # Toggle all windows into floating mode
 bind = $mainMod, J, togglesplit # Toggle split
 bind = $mainMod, left, movefocus, l # Move focus left
 bind = $mainMod, right, movefocus, r # Move focus right
@@ -68,7 +69,7 @@ bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh # Open waybar t
 bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
 bind = $mainMod SHIFT, H, exec, $HYPRSCRIPTS/hyprshade.sh # Toggle screenshader
 # bind = $mainMod ALT, G, exec, $HYPRSCRIPTS/gamemode.sh # Toggle game mode
-bind = $mainMod, Z, exec, missioncenter # Open Mission Center
+# bind = $mainMod, Z, exec, missioncenter # Open Mission Center
 
 # Workspaces
 bind = $mainMod, 1, workspace, 1 # Open workspace 1
