--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -18,12 +18,18 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
-windowrulev2 = float,title:^(flameshot)
-windowrulev2 = move 0 0,title:^(flameshot)
-windowrulev2 = suppressevent fullscreen,title:^(flameshot)
+windowrulev2 = float,title:^(flameshot)$
+windowrulev2 = move 0 0,title:^(flameshot)$
+windowrulev2 = suppressevent fullscreen,title:^(flameshot)$
 
 windowrule = workspace 10 silent, ^(.*Spotify.*)$
 windowrule = workspace 10 silent, ^(.*signal.*)$
 # windowrulev2 = minsize 500 500,class:.*
-windowrulev2 = minsize 10% 10%,floating:1
+windowrulev2 = minsize 30% 35%,floating:1
+
+
+
+windowrule = float, ^(.*floating.*)$
+windowrule = size 80% 80%, ^(.*floating.*)$
+windowrule = center, ^(.*floating.*)$
 
