--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -18,10 +18,13 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
-windowrulev2 = float,title:^(flameshot)$
-windowrulev2 = move 0 0,title:^(flameshot)$
-windowrulev2 = suppressevent fullscreen,title:^(flameshot)$
-
+windowrulev2 = noanim, class:^(flameshot)$
+windowrulev2 = float, class:^(flameshot)$
+windowrulev2 = move 0 0, class:^(flameshot)$
+windowrulev2 = pin, class:^(flameshot)$
+# set this to your leftmost monitor id, otherwise you have to move your cursor to the leftmost monitor
+# before executing flameshot
+windowrulev2 = monitor 0, class:^(flameshot)$
 windowrule = workspace 10 silent, ^(.*Spotify.*)$
 windowrule = workspace 10 silent, ^(.*signal.*)$
 # windowrulev2 = minsize 500 500,class:.*
