xorg signal in comments autostart

--- a/.config/hypr/conf/autostart/autostart.conf
+++ b/.config/hypr/conf/autostart/autostart.conf
@@ -45,4 +45,7 @@ exec = ~/.config/hypr/scripts/set-monitor-workspace.sh
 
 # set dark theme on qt
 exec-once=gsettings set org.gnome.desktop.interface color-scheme prefer-dark
+# Xvfb :1 -screen 0 1280x720x24 &
+# DISPLAY=:1 signal-desktop --password-store="gnome-libsecret"
 exec-once=signal-desktop --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
+exec-once=signal-desktop-beta --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
