fix float problem (not tested)

--- a/.config/hypr/conf/layouts/mylayouts.conf
+++ b/.config/hypr/conf/layouts/mylayouts.conf
@@ -58,6 +58,7 @@ binds {
 input {
     follow_mouse = 2
     # mouse_refocus = false
+    float_switch_override_focus=0  # Disable focus stealing
 }
 cursor {
     no_warps = true
