--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -4,6 +4,8 @@
 # windowrulev2 = stayfocused,floating:1
 windowrulev2 = stayfocused,floating:1
 # windowrulev2 = stayfocused,title:^(Neovim)$
+windowrulev2 = focusonactivate,floating:1
+windowrulev2 = stayfocused,floating:1
 
 windowrule = tile,^(Microsoft-edge)$
 windowrule = tile,^(Brave-browser)$
@@ -17,6 +19,7 @@ windowrule = float,^(qalculate-gtk)$
 windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
+
 
 windowrulev2 = noanim, class:^(flameshot)$
 windowrulev2 = float, class:^(flameshot)$
