row mode. signal-x11 alias

--- a/.config/hypr/conf/layouts/mylayouts.conf
+++ b/.config/hypr/conf/layouts/mylayouts.conf
@@ -16,8 +16,7 @@ $primary = HDMI-A-1
 $secondary = HDMI-A-2
 plugin {
     scroller {
-        # monitor_options = ($primary = (mode = col; column_default_width = onehalf; window_default_height = one), $secondary = (mode = col; column_default_width = one; window_default_height = onehalf))
-        monitor_options = ($primary = (mode = col ), $secondary = (mode = col))
+        # monitor_options = ($primary = (mode = col ), $secondary = (mode = col))
         jump_labels_color = rgba(774499ff)
         jump_labels_scale = 0.2
         column_default_width = one
