--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -132,7 +132,8 @@ bind = , XF86AudioPause, exec, playerctl pause # Audio pause
 bind = , XF86AudioNext, exec, playerctl next # Audio next
 bind = , XF86AudioPrev, exec, playerctl previous # Audio previous
 # bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send "Microphone" "$(pactl get-source-mute @DEFAULT_SOURCE@)"
-bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send "Microphone" "$(pactl get-source-mute @DEFAULT_SOURCE@ | grep -q 'yes' && echo 'Muted' || echo 'Active')"  # Toggle microphone
+# bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send "Microphone" "$(pactl get-source-mute @DEFAULT_SOURCE@ | grep -q 'yes' && echo 'Muted' || echo 'Active')"  # Toggle microphone
+bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/microphone-mute.sh
 # bind = , XF86AudioMicMute, exec, amixer set Capture toggle && notify-send "Microphone" "$(amixer get Capture | grep -q '\[off\]' && echo 'Muted' || echo 'Active')"
 bind = , XF86Calculator, exec, ~/.config/ml4w/settings/calculator.sh # Open calculator
 bind = , XF86Lock, exec, hyprlock # Open screenlock
