Fixed signal-desktop and brave, muting mic sound, lauch nc,

--- a/.config/hypr/conf/autostart/autostart.conf
+++ b/.config/hypr/conf/autostart/autostart.conf
@@ -40,6 +40,9 @@ exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
 # Dock
 exec-once = ~/.config/nwg-dock-hyprland/launch.sh
 
+# Clipboard
+# exec-once = wl-paste --type text --watch cliphist store
+# exec-once = wl-clip-persist --clipboard both
 
 exec = ~/.config/hypr/scripts/set-monitor-workspace.sh
 
@@ -47,5 +50,8 @@ exec = ~/.config/hypr/scripts/set-monitor-workspace.sh
 exec-once=gsettings set org.gnome.desktop.interface color-scheme prefer-dark
 # Xvfb :1 -screen 0 1280x720x24 &
 # DISPLAY=:1 signal-desktop --password-store="gnome-libsecret"
-exec-once=signal-desktop --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
-exec-once=signal-desktop-beta --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
+exec-once=env WAYLAND_DISPLAY= XDG_SESSION_TYPE=x11 signal-desktop --use-gl=desktop --enable-features=UseOzonePlatform --ozone-platform=x11 --password-store="gnome-libsecret"
+exec-once=env WAYLAND_DISPLAY= XDG_SESSION_TYPE=x11 signal-desktop-beta --use-gl=desktop --enable-features=UseOzonePlatform --ozone-platform=x11 --password-store="gnome-libsecret"
+exec-once=nextcloud --background
+# exec-once=signal-desktop --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
+# exec-once=signal-desktop-beta --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
