--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -30,6 +30,9 @@ windowrulev2 = pin, class:^(flameshot)$
 windowrulev2 = monitor 0, class:^(flameshot)$
 windowrule = workspace 10 silent, ^(.*Spotify.*)$
 windowrule = workspace 10 silent, ^(.*signal.*)$
+windowrulev2 = workspace 10 silent, class:^(.*Signal.*)$, xwayland:1
+
+windowrule = workspace 10 silent, title:^(.*signal.*)$
 # windowrulev2 = minsize 500 500,class:.*
 windowrulev2 = minsize 30% 35%,floating:1
 
