--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -42,3 +42,4 @@ windowrule = float, ^(.*floating.*)$
 windowrule = size 80% 80%, ^(.*floating.*)$
 windowrule = center, ^(.*floating.*)$
 
+windowrule=float,^(rofi)$
