--- a/.config/hypr/conf/autostart/autostart.conf
+++ b/.config/hypr/conf/autostart/autostart.conf
@@ -53,5 +53,6 @@ exec-once=gsettings set org.gnome.desktop.interface color-scheme prefer-dark
 exec-once=env WAYLAND_DISPLAY= XDG_SESSION_TYPE=x11 signal-desktop --use-gl=desktop --enable-features=UseOzonePlatform --ozone-platform=x11 --password-store="gnome-libsecret"
 exec-once=env WAYLAND_DISPLAY= XDG_SESSION_TYPE=x11 signal-desktop-beta --use-gl=desktop --enable-features=UseOzonePlatform --ozone-platform=x11 --password-store="gnome-libsecret"
 exec-once=nextcloud --background
+exec-once=errands
 # exec-once=signal-desktop --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
 # exec-once=signal-desktop-beta --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret"
