--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -54,8 +54,11 @@ bind = $mainMod, K, swapsplit # Swapsplit
 # Actions
 bind = $mainMod SHIFT, A, exec, $HYPRSCRIPTS/toggle-animations.sh # Toggle animations
 # bind = $mainMod, PRINT, exec, $HYPRSCRIPTS/screenshot.sh # Take a screenshot
-bind = $mainMod, PRINT, exec, XDG_CURRENT_DESKTOP=sway flameshot gui # Take a screenshot
-bind = $mainMod SHIFT, S, exec, XDG_CURRENT_DESKTOP=sway flameshot gui # Take a screenshot
+#
+# bind = SUPER SHIFT, P, exec, grim -g "$(slurp -d)" - | wl-copy -t image/png
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy -t image/png
+# bind = $mainMod, PRINT, exec, XDG_CURRENT_DESKTOP=sway flameshot gui # Take a screenshot
+# bind = $mainMod SHIFT, S, exec, XDG_CURRENT_DESKTOP=sway flameshot gui # Take a screenshot
 
 # bind = $mainMod SHIFT, S, exec, $HYPRSCRIPTS/screenshot.sh # Take a screenshot
 bind = $mainMod CTRL, Q, exec, wlogout # Start wlogout
