removed ghostty gtk-adwaita

--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -10,10 +10,13 @@ windowrulev2 = stayfocused,floating:1
 windowrule = tile,^(Microsoft-edge)$
 windowrule = tile,^(Brave-browser)$
 windowrule = tile,^(Chromium)$
+windowrulev2 = tile, class:^(gnome-calculator)$
+windowrulev2 = tile, class:^(org.gnome.Calculator)$
+
 windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
-windowrule = float,^(qalculate-gtk)$
+# windowrule = float,^(qalculate-gtk)$
 
 # Browser Picture in Picture
 windowrulev2 = float, title:^(Picture-in-Picture)$
@@ -42,4 +45,4 @@ windowrule = float, ^(.*floating.*)$
 windowrule = size 80% 80%, ^(.*floating.*)$
 windowrule = center, ^(.*floating.*)$
 
-windowrule=float,^(rofi)$
+# windowrule=float,^(rofi)$
