--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -30,6 +30,7 @@ bind = $mainMod, S, exec, ~/.config/ml4w/settings/scratch-buffer.sh
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh # Open the filemanager
 bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the emoji picker
 bind = $mainMod, equal, exec, ~/.config/ml4w/settings/calculator.sh # Open the calculator
+bind = $mainMod SHIFT, equal, exec, gnome-calculator
 
 # Windows
 # bind = $mainMod, W, exec, $HYPRSCRIPTS/set-monitor-workspace.sh # fix workspace and screen
@@ -139,6 +140,7 @@ bind = , XF86AudioPrev, exec, playerctl previous # Audio previous
 bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/microphone-mute.sh
 # bind = , XF86AudioMicMute, exec, amixer set Capture toggle && notify-send "Microphone" "$(amixer get Capture | grep -q '\[off\]' && echo 'Muted' || echo 'Active')"
 bind = , XF86Calculator, exec, ~/.config/ml4w/settings/calculator.sh # Open calculator
+
 bind = , XF86Lock, exec, hyprlock # Open screenlock
 bind = , XF86Tools, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
 bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10
