--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -178,8 +178,8 @@ bind = $mainMod, bracketright, scroller:setmode, col
 # bind = $mainMod SHIFT, minus, scroller:cycleheight, prev
 bind = $mainMod SHIFT, right, scroller:cyclewidth, next
 bind = $mainMod SHIFT, left, scroller:cyclewidth, prev
-bind = $mainMod SHIFT, up, scroller:cycleheight, next
-bind = $mainMod SHIFT, down, scroller:cycleheight, prev
+bind = $mainMod SHIFT, down, scroller:cycleheight, next
+bind = $mainMod SHIFT, up, scroller:cycleheight, prev
 
 # Admit/Expel
 bind = $mainMod, I, scroller:admitwindow,
