--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -23,7 +23,7 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
-
+# Flameshot (not working)
 windowrulev2 = noanim, class:^(flameshot)$
 windowrulev2 = float, class:^(flameshot)$
 windowrulev2 = move 0 0, class:^(flameshot)$
@@ -34,6 +34,7 @@ windowrulev2 = monitor 0, class:^(flameshot)$
 windowrule = workspace 10 silent, ^(.*Spotify.*)$
 windowrule = workspace 10 silent, ^(.*signal.*)$
 windowrulev2 = workspace 10 silent, class:^(.*Signal.*)$, xwayland:1
+windowrule = workspace 5 silent, ^(io.github.mrvladus.List)$
 
 windowrule = workspace 10 silent, title:^(.*signal.*)$
 # windowrulev2 = minsize 500 500,class:.*
@@ -44,5 +45,10 @@ windowrulev2 = minsize 30% 35%,floating:1
 windowrule = float, ^(.*floating.*)$
 windowrule = size 80% 80%, ^(.*floating.*)$
 windowrule = center, ^(.*floating.*)$
+
+
+# Force Teams sharing dialog to be tiled and interactive
+windowrule = tile, title:^(teams.microsoft.com is sharing a window.)$
+windowrule = stayfocused, title:^(teams.microsoft.com is sharing a window.)$
 
 # windowrule=float,^(rofi)$
