added token bind

--- a/.config/hypr/conf/layouts/mylayouts.conf
+++ b/.config/hypr/conf/layouts/mylayouts.conf
@@ -3,7 +3,7 @@
 # ----------------------------------------------------- 
 
 
-exec-once = hyprctl dispatch scroller:setmode col
+# exec-once = hyprctl dispatch scroller:setmode col
 debug {
     enable_stdout_logs = true
 }
@@ -22,6 +22,8 @@ plugin {
         jump_labels_scale = 0.2
         column_default_width = one
         focus_wrap = false
+
+        new_on_active = before
         # mode = 1 
         # gesture_scroll_enable = false
 # overview_scale_content = 1
@@ -43,6 +45,7 @@ dwindle {
 master {
     # Commented out du3e to compatibility reasons
     # new_status = master
+  # new_on_active = before
 }
 
 gestures {
@@ -59,6 +62,8 @@ input {
     follow_mouse = 2
     # mouse_refocus = false
     float_switch_override_focus=0  # Disable focus stealing
+   mouse_refocus = false  # Prevent mouse from changing focus when windows appear/disappear
+      focus_on_close = true
 }
 cursor {
     no_warps = true
