--- a/.config/hypr/conf/keybindings/mykb.conf
+++ b/.config/hypr/conf/keybindings/mykb.conf
@@ -140,6 +140,7 @@ bind = , XF86AudioPrev, exec, playerctl previous # Audio previous
 bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/microphone-mute.sh
 # bind = , XF86AudioMicMute, exec, amixer set Capture toggle && notify-send "Microphone" "$(amixer get Capture | grep -q '\[off\]' && echo 'Muted' || echo 'Active')"
 bind = , XF86Calculator, exec, ~/.config/ml4w/settings/calculator.sh # Open calculator
+bind = $mainMod, k, exec, $HYPRSCRIPTS/token.sh  # Get a list of available token to copy to clipboard
 
 bind = , XF86Lock, exec, hyprlock # Open screenlock
 bind = , XF86Tools, exec, $(cat ~/.config/ml4w/settings/terminal.sh) --class dotfiles-floating -e ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
