win rule update

--- a/.config/hypr/conf/windowrules/mywin.conf
+++ b/.config/hypr/conf/windowrules/mywin.conf
@@ -1,54 +1,53 @@
 # ----------------------------------------------------- 
 # Window rules
 # ----------------------------------------------------- 
-# windowrulev2 = stayfocused,floating:1
-windowrulev2 = stayfocused,floating:1
-# windowrulev2 = stayfocused,title:^(Neovim)$
-windowrulev2 = focusonactivate,floating:1
-windowrulev2 = stayfocused,floating:1
+# Remove duplicates and use consistent windowrulev2 syntax
+windowrulev2 = stayfocused, floating:1
+windowrulev2 = focusonactivate, floating:1
 
-windowrule = tile,^(Microsoft-edge)$
-windowrule = tile,^(Brave-browser)$
-windowrule = tile,^(Chromium)$
+# Calculator apps (uses proper full matching)
 windowrulev2 = tile, class:^(gnome-calculator)$
 windowrulev2 = tile, class:^(org.gnome.Calculator)$
 
-windowrule = float,^(pavucontrol)$
-windowrule = float,^(blueman-manager)$
-windowrule = float,^(nm-connection-editor)$
-# windowrule = float,^(qalculate-gtk)$
+# Uncomment these if needed, updated to windowrulev2 syntax
+# windowrulev2 = tile, class:^(Microsoft-edge)$
+# windowrulev2 = tile, class:^(Brave-browser)$
+# windowrulev2 = tile, class:^(Chromium)$
+# windowrulev2 = float, class:^(pavucontrol)$
+# windowrulev2 = float, class:^(blueman-manager)$
+# windowrulev2 = float, class:^(nm-connection-editor)$
+# windowrulev2 = float, class:^(qalculate-gtk)$
 
 # Browser Picture in Picture
 windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 
-# Flameshot (not working)
+# Flameshot (fixed for proper matching)
 windowrulev2 = noanim, class:^(flameshot)$
 windowrulev2 = float, class:^(flameshot)$
 windowrulev2 = move 0 0, class:^(flameshot)$
 windowrulev2 = pin, class:^(flameshot)$
-# set this to your leftmost monitor id, otherwise you have to move your cursor to the leftmost monitor
-# before executing flameshot
 windowrulev2 = monitor 0, class:^(flameshot)$
-windowrule = workspace 10 silent, ^(.*Spotify.*)$
-windowrule = workspace 10 silent, ^(.*signal.*)$
+
+# Workspace assignments (converted to windowrulev2)
+windowrulev2 = workspace 10 silent, class:^(.*Spotify.*)$
+windowrulev2 = workspace 10 silent, class:^(.*signal.*)$
 windowrulev2 = workspace 10 silent, class:^(.*Signal.*)$, xwayland:1
-windowrule = workspace 5 silent, ^(io.github.mrvladus.List)$
+windowrulev2 = workspace 5 silent, class:^(io.github.mrvladus.List)$
+windowrulev2 = workspace 10 silent, title:^(.*signal.*)$
 
-windowrule = workspace 10 silent, title:^(.*signal.*)$
-# windowrulev2 = minsize 500 500,class:.*
-windowrulev2 = minsize 30% 35%,floating:1
+# Minimum size for floating windows
+windowrulev2 = minsize 30% 35%, floating:1
 
+# Custom rules for windows with "floating" in title/class
+windowrulev2 = float, title:^(.*floating.*)$
+windowrulev2 = size 80% 80%, title:^(.*floating.*)$
+windowrulev2 = center, title:^(.*floating.*)$
 
+# Teams sharing dialog
+windowrulev2 = tile, title:^(teams.microsoft.com is sharing a window.)$
+windowrulev2 = stayfocused, title:^(teams.microsoft.com is sharing a window.)$
 
-windowrule = float, ^(.*floating.*)$
-windowrule = size 80% 80%, ^(.*floating.*)$
-windowrule = center, ^(.*floating.*)$
-
-
-# Force Teams sharing dialog to be tiled and interactive
-windowrule = tile, title:^(teams.microsoft.com is sharing a window.)$
-windowrule = stayfocused, title:^(teams.microsoft.com is sharing a window.)$
-
-# windowrule=float,^(rofi)$
+# Uncomment if needed
+# windowrulev2 = float, class:^(rofi)$
