fixed mouse selection interruption

--- a/.config/hypr/conf/layouts/mylayouts.conf
+++ b/.config/hypr/conf/layouts/mylayouts.conf
@@ -60,10 +60,11 @@ binds {
 }
 input {
     follow_mouse = 2
+    accel_profile = flat
     # mouse_refocus = false
     float_switch_override_focus=0  # Disable focus stealing
-   mouse_refocus = false  # Prevent mouse from changing focus when windows appear/disappear
-      focus_on_close = true
+   # mouse_refocus = false  # Prevent mouse from changing focus when windows appear/disappear
+   #    focus_on_close = true
 }
 cursor {
     no_warps = true
