--- a/.config/hypr/conf/layouts/mylayouts.conf
+++ b/.config/hypr/conf/layouts/mylayouts.conf
@@ -60,7 +60,7 @@ binds {
 }
 input {
     follow_mouse = 2
-    accel_profile = flat
+    # accel_profile = flat
     # mouse_refocus = false
     float_switch_override_focus=0  # Disable focus stealing
    # mouse_refocus = false  # Prevent mouse from changing focus when windows appear/disappear
