--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/wallpaper
-wallpaper = ~/wallpaper/14482.jpg
+wallpaper = ~/wallpaper/od_autumn.jpg
 backend = hyprpaper
 monitors = All
 fill = fill
