--- a/.config/hypr/conf/layouts/mylayouts.conf
+++ b/.config/hypr/conf/layouts/mylayouts.conf
@@ -65,7 +65,13 @@ input {
     float_switch_override_focus=0  # Disable focus stealing
    # mouse_refocus = false  # Prevent mouse from changing focus when windows appear/disappear
    #    focus_on_close = true
+   
+    sensitivity = 0
 }
 cursor {
     no_warps = true
+}
+
+misc {
+    mouse_move_enables_dpms = true
 }
