config: niri, setup like scroll

--- a/.config/scroll/keybinding.conf
+++ b/.config/scroll/keybinding.conf
@@ -23,7 +23,7 @@
     bindsym $mod+Shift+r reload
 
     # Exit scroll (logs you out of your Wayland session)
-    bindsym $mod+Ctrl+q exec scrollnag -t warning -m 'You pressed the exit shortcut. Do you really want to exit scroll? This will end your Wayland session.' -B 'Yes, exit scroll' 'scrollmsg exit'
+    bindsym $mod+Ctrl+q exec wlogout
 
     # Layout mode
     bindsym $mod+bracketleft set_mode h
@@ -100,7 +100,7 @@
 
     # Overview
     bindsym --no-repeat $mod+tab scale_workspace overview
-    bindsym --whole-window button8 scale_workspace overview
+    # bindsym --whole-window button8 scale_workspace overview
 
     # Jump
     # jump_labels_color #9e1530FF
@@ -111,17 +111,17 @@
 
     # Content
     bindsym $mod+comma scale_content incr -0.05
-    bindsym --whole-window $mod+button4 scale_content incr -0.05
+    # bindsym --whole-window $mod+button4 scale_content incr -0.05
     bindsym $mod+period scale_content incr 0.05
-    bindsym --whole-window $mod+button5 scale_content incr 0.05
+    # bindsym --whole-window $mod+button5 scale_content incr 0.05
     bindsym $mod+Ctrl+period scale_content reset
 
 #
 # Layout stuff:
 #
     # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
-    bindsym $mod+Ctrl+f fullscreen global
+    # bindsym $mod+f fullscreen
+    # bindsym $mod+Ctrl+f fullscreen global
 
     # Toggle the current focus between tiling and floating mode
     bindsym $mod+t focus mode_toggle
@@ -149,27 +149,6 @@
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+z scratchpad show
 
-#
-# Mode modifiers
-#
-mode "modifiers" {
-    bindsym $right set_mode after; mode default 
-    bindsym $left set_mode before; mode default 
-    bindsym home set_mode beginning; mode default 
-    bindsym end set_mode end; mode default 
-    bindsym $up set_mode focus; mode default 
-    bindsym $down set_mode nofocus; mode default 
-    bindsym h set_mode center_horiz; mode default 
-    bindsym Shift+h set_mode nocenter_horiz; mode default 
-    bindsym v set_mode center_vert; mode default 
-    bindsym Shift+v set_mode nocenter_vert; mode default 
-    bindsym r set_mode reorder_auto; mode default 
-    bindsym Shift+r set_mode noreorder_auto; mode default 
-
-    # Return to default mode
-    bindsym Escape mode "default"
-}
-bindsym $mod+backslash mode "modifiers"
 
 #
 # Resizing containers:
