--- a/.config/scroll/unused.conf
+++ b/.config/scroll/unused.conf
@@ -78,3 +78,26 @@
 #     bindsym Escape mode "default"
 # }
 # bindsym $mod+Shift+r mode "resize"
+
+
+#
+# Mode modifiers
+#
+# mode "modifiers" {
+#     bindsym $right set_mode after; mode default 
+#     bindsym $left set_mode before; mode default 
+#     bindsym home set_mode beginning; mode default 
+#     bindsym end set_mode end; mode default 
+#     bindsym $up set_mode focus; mode default 
+#     bindsym $down set_mode nofocus; mode default 
+#     bindsym h set_mode center_horiz; mode default 
+#     bindsym Shift+h set_mode nocenter_horiz; mode default 
+#     bindsym v set_mode center_vert; mode default 
+#     bindsym Shift+v set_mode nocenter_vert; mode default 
+#     bindsym r set_mode reorder_auto; mode default 
+#     bindsym Shift+r set_mode noreorder_auto; mode default 
+#
+#     # Return to default mode
+#     bindsym Escape mode "default"
+# }
+# bindsym $mod+backslash mode "modifiers"
