--- a/.config/scroll/utils-keybinding.conf
+++ b/.config/scroll/utils-keybinding.conf
@@ -21,7 +21,7 @@ input type:keyboard {
     bindsym --locked XF86AudioMicMute exec $scripts/microphone-mute.sh
     # Music
     # Audio pause
-    bindsym --locked XF86AudioPause exec playerctl pause 
+    bindsym --locked XF86AudioPlay exec playerctl play-pause 
     # Audio next
     bindsym --locked XF86AudioNext exec playerctl next 
     # Audio previous
