--- a/.local/share/applications/signal-desktop.desktop
+++ b/.local/share/applications/signal-desktop.desktop
@@ -4,7 +4,10 @@ Name=Signal
 Comment=Signal - Private Messenger
 Comment[de]=Signal - Sicherer Messenger
 Icon=signal-desktop
-Exec=env WAYLAND_DISPLAY= XDG_SESSION_TYPE=x11 signal-desktop --use-gl=desktop --enable-features=UseOzonePlatform --ozone-platform=x11 --password-store="gnome-libsecret" -- %u
+# hyprland
+# Exec=env WAYLAND_DISPLAY= XDG_SESSION_TYPE=x11 signal-desktop --use-gl=desktop --enable-features=UseOzonePlatform --ozone-platform=x11 --password-store="gnome-libsecret" -- %u
+# niri
+Exec=signal-desktop --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store="gnome-libsecret" -- %u
 # Exec=signal-desktop -- %u
 Terminal=false
 Categories=Network;InstantMessaging;
