--- a/.config/scroll/keybinding.conf
+++ b/.config/scroll/keybinding.conf
@@ -149,6 +149,7 @@
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+z scratchpad show
 
+    bindsym $mod+Ctrl+z workspace back_and_forth
 
 #
 # Resizing containers:
