--- a/.config/scroll/utils-keybinding.conf
+++ b/.config/scroll/utils-keybinding.conf
@@ -3,8 +3,8 @@
 #
 
 input type:keyboard {
-    xkb_layout us
-    xkb_variant colemak_dh  
+    xkb_layout us,us,ca
+    xkb_variant colemak_dh,,fr 
     # To toggle between Colemak-DH and standard US QWERTY:
     # xkb_layout "us,us"
     # xkb_variant "colemak_dh,"
